--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,27 @@
-body {
-  background-color: ivory;
+:root {
+  --primary-color: black;
+}
+
+h1 {
+  color: var(--primary-color);
+  text-align: center;
+  padding-top: 200px;
+  font-family: "Permanent Marker", cursive;
+}
+
+h3,
+h4 {
+  text-align: center;
+  color: var(--primary-color);
+  font-family: "Montserrat", sans-serif;
+}
+
+.hero {
+  background-image: url(/photos/background.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  height: 750px;
+  background-position: center;
+  width: 100%;
 }
