--- a/style/style.css
+++ b/style/style.css
@@ -59,17 +59,28 @@ footer {
 }
 
 .writing-work h3 {
-  padding-top: 30px;
+  padding: 30px 0;
+  color: white;
+}
+
+.web-work {
+  background-color: var(--blue);
+  text-align: center;
+}
+
+.web-work h3 {
+  padding: 30px 0;
   color: white;
 }
 
 .carousel {
+  height: 500px;
   width: 500px;
-  height: 250px;
+  margin: 0 auto;
 }
 
 .contact {
-  background-color: var(--blue);
+  background-color: var(--yellow);
   padding: 20px 0;
   text-align: center;
 }
