--- a/style/style.css
+++ b/style/style.css
@@ -75,6 +75,11 @@ a {
   border: none;
 }
 
+.card-title,
+.card-text {
+  text-align: center;
+}
+
 .heading {
   padding: 30px 0;
   color: var(--white);
@@ -129,6 +134,12 @@ a {
   display: block;
   margin: 0 auto;
   background-color: var(--blue);
+}
+
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
 }
 
 @media (max-width: 576px) {
