Added nav bar to index

--- a/style/style.css
+++ b/style/style.css
@@ -7,26 +7,22 @@
 
 body {
   font-family: "Montserrat", sans-serif;
+  text-align: center;
 }
 
 h1 {
   color: var(--black);
-  text-align: center;
   padding-top: 200px;
   font-family: "Permanent Marker", cursive;
 }
 
 h2 {
   font-size: 26px;
+  color: var(--black);
 }
 
 h3 {
   font-size: 24px;
-}
-
-h2,
-h3 {
-  text-align: center;
   color: var(--black);
 }
 
@@ -38,10 +34,10 @@ p {
 
 footer {
   background-color: var(--white);
-  text-align: center;
   font-size: smaller;
   padding: 10px 0;
 }
+
 a {
   text-decoration: none;
   color: var(--white);
@@ -65,9 +61,12 @@ a {
   color: var(--yellow);
 }
 
+.about-blurb {
+  text-align: left;
+}
+
 .writing-work {
   background-color: var(--yellow);
-  text-align: center;
 }
 
 .card {
@@ -77,11 +76,7 @@ a {
 }
 
 .card-title {
-  text-align: center;
   font-weight: bold;
-}
-.card-text {
-  text-align: center;
 }
 
 .heading {
@@ -91,7 +86,6 @@ a {
 
 .web-work {
   background-color: var(--blue);
-  text-align: center;
 }
 
 .carousel {
@@ -103,7 +97,6 @@ a {
 .contact {
   background-color: var(--yellow);
   padding: 20px 0;
-  text-align: center;
 }
 
 .email {
@@ -114,10 +107,6 @@ a {
 .icon {
   text-decoration: none;
   color: var(--primary-color);
-}
-
-.contact-icon {
-  text-align: center;
 }
 
 .journalism-work {
@@ -143,7 +132,6 @@ a {
 }
 
 .work-subhead {
-  text-align: center;
   color: var(--white);
 }
 
@@ -167,14 +155,9 @@ a {
   color: black;
 }
 
-.work-web-paragraph {
-  text-align: center;
-}
-
 .work-web-link {
   display: block;
   margin: 0 auto;
-  text-align: center;
 }
 
 @media (max-width: 576px) {
