--- a/style/style.css
+++ b/style/style.css
@@ -51,6 +51,16 @@ a {
   display: flex;
   flex: 1;
   justify-content: space-around;
+  padding-top: 20px;
+}
+#brand {
+  border: 2px dotted black;
+  border-radius: 50%;
+  padding: 10px;
+  font-family: "Permanent Marker", cursive;
+  font-size: 70px;
+  position: relative;
+  top: -35px;
 }
 
 .hero {
@@ -168,14 +178,6 @@ a {
 .work-web-link {
   display: block;
   margin: 0 auto;
-}
-
-#brand {
-  border: 2px dotted black;
-  border-radius: 50%;
-  padding: 10px;
-  font-family: "Permanent Marker", cursive;
-  font-size: 70px;
 }
 
 @media (max-width: 576px) {
