--- a/style/style.css
+++ b/style/style.css
@@ -63,9 +63,10 @@ a {
   display: flex;
   flex: 1;
   justify-content: space-around;
-  padding-top: 20px;
   transition: top 0.3s;
-  background-color: purple;
+  background-color: var(--blue);
+  opacity: 0.9;
+  font-size: 5px;
 }
 
 #brand {
