--- a/style/style.css
+++ b/style/style.css
@@ -41,18 +41,17 @@ footer {
 a {
   text-decoration: none;
   color: var(--white);
-}
-
-.nav-link {
-  font-size: 25px;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 .navbar-nav {
   display: flex;
   flex: 1;
   justify-content: space-around;
-  padding-top: 20px;
+  padding-top: 30px;
   transition: top 0.3s;
+  font-size: 25px;
 }
 
 .nav-active {
@@ -63,10 +62,11 @@ a {
   display: flex;
   flex: 1;
   justify-content: space-around;
-  transition: top 0.3s;
-  background-color: var(--blue);
+  transition: top 0.5s;
+  background-color: var(--yellow);
   opacity: 0.9;
-  font-size: 5px;
+  height: 52px;
+  padding-top: 0;
 }
 
 #brand {
@@ -118,6 +118,7 @@ a {
 .heading {
   padding: 30px 0;
   color: var(--white);
+  font-size: 26px;
 }
 
 .web-work {
