Added Paris, Randy and Disney pages

--- a/style/style.css
+++ b/style/style.css
@@ -225,7 +225,7 @@ a:hover {
 }
 
 .story-photo {
-  margin-top: 350px;
+  margin-top: 200px;
   height: 500px;
   width: 80%;
 }
@@ -237,6 +237,12 @@ a:hover {
 .video {
   display: block;
   margin: 0 auto;
+}
+
+.bouillon-photo {
+  height: 100%;
+  width: 100%;
+  margin-top: 20px;
 }
 
 @media (max-width: 912px) {
